[project]
name = "submerged-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "openai>=1.75.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]
